# docs/swagger.yaml
@@ -30,8 +30,76 @@ definitions:
       value:
         type: string
     type: object
-  job.Job:
+  job.JobHistoryEvent:
     properties:
+      eventType:
+        description: The event type (required)
+        type: string
+      timestamp:
+        description: The event timestamp (unixmilliseconds) (required)
+        type: integer
+    type: object
+  job.JobProperties:
+    additionalProperties: true
+    type: object
+  job.JobRequest:
+    properties:
+      callbackUrl:
+        description: URL to call when job completes (success or failure) (optional)
+        example: https://api.example.com/webhook
+        type: string
+      delay:
+        description: Delay (in seconds) to wait before starting the job
+        example: 0
+        type: integer
+      lockResources:
+        description: LockResources is the list of resources to lock (optional)
+        items:
+          type: string
+        type: array
+      name:
+        description: Name is the name of the job (optional)
+        example: myJobName01
+        type: string
+      priority:
+        description: Priority is the priority of the job (optional)
+        example: 0
+        type: integer
+      properties:
+        allOf:
+        - $ref: '#/definitions/job.JobProperties'
+        description: Properties is the job properties (required)
+      requester:
+        description: Requester is the identifier of the job requester (optional)
+        type: string
+      sessionId:
+        description: SessionId is the session identifier of the requester (optional)
+        example: 6e70464d-85cf-431d-a9c9-a1f9c0ac82dc
+        type: string
+      startAfter:
+        description: Timestamp (in milliseconds) to start the job after
+        type: integer
+      topic:
+        description: Topic is the topic name for which the job has been created (optional)
+        example: default
+        type: string
+      traceId:
+        description: TraceId is the trace identifier of the job (optional)
+        example: e7b46b16-c971-464e-8a47-c791be0ce2ed
+        type: string
+      userAgent:
+        description: UserAgent is the user agent (or program name) that make the request
+          (optional)
+        example: myJobProducerName
+        type: string
+    required:
+    - properties
+    type: object
+  job.JobResponse:
+    properties:
+      callbackUrl:
+        description: URL to call when job completes (success or failure) (optional)
+        type: string
       history:
         description: The list of events of the job
         items:
@@ -64,6 +132,9 @@ definitions:
       startAfter:
         description: Timestamp (in milliseconds) to start the job after
         type: integer
+      state:
+        description: The current state of the job (human-readable)
+        type: string
       topic:
         description: The topic name for which the job has been created (optional)
         type: string
@@ -77,65 +148,6 @@ definitions:
         description: Duration (in seconds) to keep the job hidden from the queue after
           it is fetched
         type: integer
-    type: object
-  job.JobHistoryEvent:
-    properties:
-      eventType:
-        description: The event type (required)
-        type: string
-      timestamp:
-        description: The event timestamp (unixmilliseconds) (required)
-        type: integer
-    type: object
-  job.JobProperties:
-    additionalProperties: true
-    type: object
-  job.JobRequest:
-    properties:
-      delay:
-        description: Delay (in seconds) to wait before starting the job
-        type: integer
-      lockResources:
-        description: LockResources is the list of resources to lock (optional)
-        items:
-          type: string
-        type: array
-      name:
-        description: Name is the name of the job (optional)
-        example: myJobName01
-        type: string
-      priority:
-        description: Priority is the priority of the job (optional)
-        type: integer
-      properties:
-        allOf:
-        - $ref: '#/definitions/job.JobProperties'
-        description: Properties is the job properties (required)
-      requester:
-        description: Requester is the identifier of the job requester (optional)
-        type: string
-      sessionId:
-        description: SessionId is the session identifier of the requester (optional)
-        example: 6e70464d-85cf-431d-a9c9-a1f9c0ac82dc
-        type: string
-      startAfter:
-        description: Timestamp (in milliseconds) to start the job after
-        type: integer
-      topic:
-        description: Topic is the topic name for which the job has been created (optional)
-        example: default
-        type: string
-      traceId:
-        description: TraceId is the trace identifier of the job (optional)
-        example: e7b46b16-c971-464e-8a47-c791be0ce2ed
-        type: string
-      userAgent:
-        description: UserAgent is the user agent (or program name) that make the request
-          (optional)
-        example: myJobProducerName
-        type: string
-    required:
-    - properties
     type: object
   job.LockedResources:
     additionalProperties:
@@ -186,6 +198,60 @@ definitions:
         $ref: '#/definitions/metrics.JobMetrics'
       type: array
     type: object
+  metrics.JobStatsMetrics:
+    properties:
+      canceledJobs:
+        description: number of canceled jobs
+        type: integer
+      createdJobs:
+        description: total number of jobs
+        type: integer
+      delayedJobs:
+        description: number of delayed jobs
+        type: integer
+      deletedJobs:
+        description: number of deleted jobs
+        type: integer
+      existingJobs:
+        description: current number of existing jobs
+        type: integer
+      failedJobs:
+        description: number of failed jobs
+        type: integer
+      hiddenJobs:
+        description: number of hidden jobs
+        type: integer
+      pendingJobs:
+        description: number of pending jobs
+        type: integer
+      queuedJobs:
+        description: number of queued jobs
+        type: integer
+      runningJobs:
+        description: number of running jobs
+        type: integer
+      succeededJobs:
+        description: number of succeeded jobs
+        type: integer
+    type: object
+  metrics.ResourceMetrics:
+    properties:
+      jobUuid:
+        description: UUID of the job that locked the resource
+        type: string
+      lockDuration:
+        description: lock duration in seconds
+        type: integer
+      resourceName:
+        description: name of the resource
+        type: string
+      startTime:
+        description: begin time when the resource was locked in seconds
+        type: integer
+      topic:
+        description: topic of the job that locked the resource
+        type: string
+    type: object
   metrics.TopicMetrics:
     properties:
       activeJobs:
@@ -207,6 +273,19 @@ definitions:
         description: total number of jobs in the topic
         type: integer
     type: object
+  web.JSONResult:
+    properties:
+      code:
+        description: The result code
+        example: 200
+        type: integer
+      data:
+        description: The result data
+      message:
+        description: The result message
+        example: success
+        type: string
+    type: object
   web.JSONResultCloneJob:
     properties:
       code:
@@ -215,7 +294,7 @@ definitions:
         type: integer
       job:
         allOf:
-        - $ref: '#/definitions/job.Job'
+        - $ref: '#/definitions/job.JobResponse'
         description: The job
       message:
         description: The result message
@@ -230,7 +309,7 @@ definitions:
         type: integer
       job:
         allOf:
-        - $ref: '#/definitions/job.Job'
+        - $ref: '#/definitions/job.JobResponse'
         description: The job
       message:
         description: The result message
@@ -246,7 +325,7 @@ definitions:
       jobs:
         description: The jobs
         items:
-          $ref: '#/definitions/job.Job'
+          $ref: '#/definitions/job.JobResponse'
         type: array
       message:
         description: The result message
@@ -261,14 +340,57 @@ definitions:
         type: integer
       job:
         allOf:
-        - $ref: '#/definitions/job.Job'
+        - $ref: '#/definitions/job.JobResponse'
         description: The job
       message:
         description: The result message
         example: success
         type: string
     type: object
+  web.JSONResultGetJobs:
+    properties:
+      code:
+        description: The result code
+        example: 200
+        type: integer
+      jobs:
+        description: The jobs
+        items:
+          $ref: '#/definitions/job.JobResponse'
+        type: array
+      limit:
+        description: The page limit
+        type: integer
+      message:
+        description: The result message
+        example: success
+        type: string
+      page:
+        description: The current page
+        type: integer
+      total:
+        description: The total number of jobs
+        type: integer
+      totalpages:
+        description: The total number of pages
+        type: integer
+    type: object
   web.JSONResultGetJobsMetrics:
+    properties:
+      code:
+        description: The result code
+        example: 200
+        type: integer
+      jobStats:
+        allOf:
+        - $ref: '#/definitions/metrics.JobStatsMetrics'
+        description: The metrics
+      message:
+        description: The result message
+        example: success
+        type: string
+    type: object
+  web.JSONResultGetJobsMetricsTopics:
     properties:
       code:
         description: The result code
@@ -311,6 +433,69 @@ definitions:
         - $ref: '#/definitions/web.TopicOldJobsMap'
         description: The oldest jobs by topic
     type: object
+  web.JSONResultGetResourcesStats:
+    properties:
+      code:
+        description: The result code
+        example: 200
+        type: integer
+      message:
+        description: The result message
+        example: success
+        type: string
+      resources:
+        description: The job resources with metrics
+        items:
+          $ref: '#/definitions/metrics.ResourceMetrics'
+        type: array
+    type: object
+  web.JSONResultGetStalledJobs:
+    properties:
+      code:
+        description: The result code
+        type: integer
+      jobs:
+        description: The stalled jobs
+        items:
+          $ref: '#/definitions/web.StalledJobResult'
+        type: array
+      message:
+        description: The result message
+        type: string
+    type: object
+  web.JSONResultGetSystemInfo:
+    properties:
+      code:
+        description: The result code
+        example: 200
+        type: integer
+      message:
+        description: The result message
+        example: success
+        type: string
+      systemInfo:
+        properties:
+          environment:
+            type: string
+          hostname:
+            type: string
+          uptime:
+            type: integer
+          version:
+            type: string
+        type: object
+    type: object
+  web.JSONResultGetSystemResources:
+    properties:
+      code:
+        example: 200
+        type: integer
+      message:
+        example: success
+        type: string
+      resourceUsage:
+        $ref: '#/definitions/web.ResourceUsage'
+    type: object
   web.JSONResultGetTopics:
     properties:
       code:
@@ -352,7 +537,7 @@ definitions:
       jobs:
         description: The jobs
         items:
-          $ref: '#/definitions/job.Job'
+          $ref: '#/definitions/job.JobResponse'
         type: array
       message:
         description: The result message
@@ -368,6 +553,47 @@ definitions:
       message:
         description: The result message
         example: success
+        type: string
+    type: object
+  web.ResourceBackendProvider:
+    properties:
+      label:
+        type: string
+      value:
+        type: string
+    type: object
+  web.ResourceMetric:
+    properties:
+      label:
+        type: string
+      value:
+        type: string
+    type: object
+  web.ResourceUsage:
+    properties:
+      backend:
+        $ref: '#/definitions/web.ResourceBackendProvider'
+      disk:
+        $ref: '#/definitions/web.ResourceMetric'
+      memory:
+        $ref: '#/definitions/web.ResourceMetric'
+    type: object
+  web.StalledJobResult:
+    properties:
+      created:
+        description: The job creation timestamp in milliseconds
+        type: integer
+      duration:
+        description: The job duration in milliseconds
+        type: integer
+      id:
+        description: The job UUID
+        type: string
+      state:
+        description: The job state
+        type: string
+      topic:
+        description: The job topic
         type: string
     type: object
   web.TopOldJobsResult:
@@ -598,6 +824,48 @@ paths:
       summary: Pull one or multiple jobs
       tags:
       - Jobs
+  /api/v1/jobs:
+    get:
+      description: Get jobs with optional filtering by status/topic, pagination, and
+        sorting
+      operationId: jobs-get-filtered
+      parameters:
+      - description: Page number (default 1, min 1)
+        in: query
+        name: page
+        type: integer
+      - description: Number of jobs per page (default 10, min 1, max 1000)
+        in: query
+        name: limit
+        type: integer
+      - description: Filter by job status (created, delayed, pending, queued, running,
+          succeeded, failed, canceled, deleted, hidden)
+        in: query
+        name: status
+        type: string
+      - description: Filter by topic
+        in: query
+        name: topic
+        type: string
+      - description: Sort criteria, comma-separated (created_asc, created_desc, priority_asc,
+          priority_desc, updated_asc, updated_desc, topic_asc, topic_desc)
+        in: query
+        name: sort
+        type: string
+      - description: Search by job ID (partial match)
+        in: query
+        name: search
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetJobs'
+      summary: Get jobs with filtering, pagination and sorting
+      tags:
+      - Jobs
   /api/v1/jobs/:
     delete:
       description: Delete all jobs
@@ -612,6 +880,7 @@ paths:
       summary: Delete all jobs
       tags:
       - Jobs
+  /api/v1/jobs/all:
     get:
       description: Get all jobs
       operationId: jobs-get-all
@@ -662,7 +931,28 @@ paths:
       summary: Delete queued jobs
       tags:
       - Jobs
-  /api/v1/observability/metrics:
+  /api/v1/jobs/stalled:
+    get:
+      description: Get jobs that have been running or queued for an unusually long
+        time
+      operationId: jobs-get-stalled
+      parameters:
+      - description: Minimum job duration in minutes to consider stalled (default
+          60, min 1, max 10080)
+        in: query
+        name: duration
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetStalledJobs'
+      summary: Get stalled jobs
+      tags:
+      - Jobs
+  /api/v1/metrics/jobs/stats:
     get:
       description: Get jobs metrics
       operationId: jobs-metrics
@@ -676,6 +966,48 @@ paths:
       summary: Get jobs metrics
       tags:
       - Utils
+  /api/v1/metrics/jobs/topics:
+    get:
+      description: Get jobs metrics topics
+      operationId: jobs-metrics-topics
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetJobsMetricsTopics'
+      summary: Get jobs metrics topics
+      tags:
+      - Utils
+  /api/v1/metrics/resources:
+    get:
+      description: Get resources stats
+      operationId: resources-stats
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetResourcesStats'
+      summary: Get resources stats
+      tags:
+      - Resources
+  /api/v1/metrics/topics:
+    get:
+      description: Get topics stats
+      operationId: topics-stats
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetTopicsStats'
+      summary: Get topics stats
+      tags:
+      - Topics
   /api/v1/resource/{resourceName}/unlock:
     post:
       description: Unlock a single resource
@@ -687,10 +1019,14 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/web.JSONResultSuccess'
+        "404":
+          description: resource not found
+          schema:
+            $ref: '#/definitions/web.JSONResult'
       summary: Unlock a single resource
       tags:
       - Resources
-  /api/v1/resources/locked:
+  /api/v1/resources:
     get:
       description: Get locked Resources
       operationId: resources-get-locked
@@ -718,6 +1054,48 @@ paths:
       summary: Unlock all resources
       tags:
       - Resources
+  /api/v1/system/health:
+    get:
+      description: Get system health status and basic diagnostics
+      operationId: system-get-health
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: string
+      summary: Get system health status
+      tags:
+      - System
+  /api/v1/system/info:
+    get:
+      description: Get system information including version, uptime, and runtime details
+      operationId: system-get-info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetSystemInfo'
+      summary: Get system information
+      tags:
+      - System
+  /api/v1/system/resources:
+    get:
+      description: Get system resource usage including memory and CPU statistics
+      operationId: system-get-resources
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: '#/definitions/web.JSONResultGetSystemResources'
+      summary: Get system resource usage
+      tags:
+      - System
   /api/v1/topics:
     get:
       description: Get jobs topics
@@ -732,20 +1110,6 @@ paths:
       summary: Get jobs topics
       tags:
       - Topics
-  /api/v1/topics/stats:
-    get:
-      description: Get topics stats
-      operationId: topics-stats
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: successful operation
-          schema:
-            $ref: '#/definitions/web.JSONResultGetTopicsStats'
-      summary: Get topics stats
-      tags:
-      - Topics
   /healthcheck:
     get:
       description: Healthcheck server
@@ -754,7 +1118,7 @@ paths:
       - text/plain
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
             type: string
       summary: Healthcheck server
@@ -782,7 +1146,7 @@ paths:
       - text/plain
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
             type: string
       summary: Ping server
